Fix header buttons & spacing

--- a/style.css
+++ b/style.css
@@ -61,10 +61,10 @@ li {
     grid-area: 1 / 2 / 2 / 5;
     background-color: white;
     display: grid;
-    gap: 20px;
+    gap: 5px;
     padding: 15px;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: .5fr .5fr;
+    grid-template-rows: .4fr .6fr;
 }
 
 #toolbar {
@@ -76,23 +76,24 @@ li {
 
 #left-toolbar {
     grid-area: 1 / 1 / 3 / 3;
-    justify-self: stretch;
+    justify-content: center;
+    align-content: center;
 }
 
 input {
     width: 70%;
     border: 0;
-    border-radius: 20px;
+    border-radius: 25px;
     background-color: lightgray;
 }
 
 #right-toolbar {
     grid-area: 1 / 3 / 2 / 4;
-    justify-self: end;
+    justify-content: center;
+    align-content: center;
 }
 
 #user-info {
-    padding-top: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-area: 2 / 1 / 3 / 4;
@@ -108,6 +109,16 @@ input {
     grid-area: 2 / 2 / 3 / 3;
     justify-self: center;
     align-self: center;
+}
+
+button {
+    background-color: #1992d4;
+    color: white;
+    padding: 8px;
+    border: 0;
+    width: 100px;
+    border-radius: 25px;
+    margin-left: 15px;
 }
 
 #content {
